# PSD-17

./: .gitignore  .gitmodules  README.md
docs/: Manual.md
esp test firmware/firmware/: platformio.ini
esp test firmware/firmware/src/: main.cpp
esp32_espidf_i2c/firmware/: platformio.ini
esp32_espidf_i2c/firmware/src/: main.cpp
esp32_foc_test/firmware/: platformio.ini
esp32_foc_test/firmware/include/: Constants.hpp
esp32_foc_test/firmware/src/: main.cpp
esp32_fresh_test/firmware/: platformio.ini
esp32_fresh_test/firmware/src/: main.cpp
esp32_i2c_test/firmware/src/: main.cpp
esp_test_firmware/firmware/: platformio.ini
esp_test_firmware/firmware/src/: main.cpp
firmware/: platformio.ini
firmware/include/i2c/: register.hpp  wire_types.hpp
firmware/include/managers/: motor_manager.hpp  register_manager.hpp  wire_manager.hpp
firmware/include/util/: i2c.hpp
firmware/src/: main.cpp
i2c test/project/: CMakeLists.txt
i2c test/project/include/: bno055.hpp  status.hpp
i2c test/project/include/math/: math_helper.hpp
i2c test/project/src/: main.cpp
i2c test/project/test/: test.cpp
i2c_test/project/: CMakeLists.txt
i2c_test/project/include/: bno055.hpp  status.hpp
i2c_test/project/include/i2c/: i2c.hpp  wire_device.hpp  wire_types.hpp
i2c_test/project/include/i2c/drivers/: psd17.hpp
i2c_test/project/include/math/: vector3d.hpp
i2c_test/project/include/util/: logger.hpp  plotter.hpp  status.hpp  util.hpp
i2c_test/project/src/: main.cpp
i2c_test/project/test/: test.cpp
pcb/: pcb.kicad_sch
pcb/AS5047-DevBoard/AS5047-Devboard/: #auto_saved_files#  AS5047-Devboard.kicad_pcb  AS5047-Devboard.kicad_prl  AS5047-Devboard.kicad_pro  AS5047-Devboard.kicad_sch
pcb/AS5047-Devboard/: AS5047-Devboard.csv  AS5047-Devboard.kicad_pcb  AS5047-Devboard.kicad_prl  AS5047-Devboard.kicad_pro  AS5047-Devboard.kicad_sch  AS5047-Devboard.step  ~AS5047-Devboard.kicad_sch.lck
pcb/AS5047-Devboard/manufacturing/: AS5047-Devboard-B_Cu.gbr  AS5047-Devboard-B_Mask.gbr  AS5047-Devboard-B_Paste.gbr  AS5047-Devboard-B_Silkscreen.gbr  AS5047-Devboard.drl  (+7 more)
pcb/DRV8874-Devboard/: #auto_saved_files#  DRV8874-Devboard.kicad_prl  DRV8874-Devboard.kicad_pro  DRV8874-Devboard.kicad_sch  fp-info-cache
samd21_fresh_test/firmware/: platformio.ini
samd21_test_firmware/firmware/: platformio.ini
stm32f446re_testbench/: platformio.ini
stm32f446re_testbench/src/: main.cpp
tinythinker/: bob.txt  platformio.ini
tinythinker/cube/: .cproject  .mxproject  .project  pinout.ioc
tinythinker/include/: core.hpp
tinythinker/src/: core.cpp
(+51 files in other folders)
